--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - '**'
+      - "**"
 
 jobs:
   build:
@@ -14,9 +14,9 @@ jobs:
         config:
         - name: Windows
           os: windows-latest
-          
-        #- name: macOS
-        #  os: macos-latest
+
+        - name: macOS
+          os: macos-latest
 
         - name: Android32
           os: ubuntu-latest
@@ -26,29 +26,55 @@ jobs:
           os: ubuntu-latest
           target: Android64
 
+        - name: iOS
+          os: macos-latest
+          target: iOS
+
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Build the mod
         uses: geode-sdk/build-geode-mod@main
         with:
-          sdk: nightly
+          bindings: Capeling/bindings
+          bindings-ref: main
           combine: true
           target: ${{ matrix.config.target }}
-      
+
   package:
     name: Package builds
     runs-on: ubuntu-latest
     needs: ['build']
 
     steps:
-      - uses: geode-sdk/build-geode-mod@combine
+      - uses: geode-sdk/build-geode-mod/combine@main
         id: build
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
-          name: Build Output
+          name: build-output
           path: ${{ steps.build.outputs.build-output }}
+
+  nightly:
+    name: Update nightly release
+    runs-on: ubuntu-latest
+    needs: ['package']
+    
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          path: './artifacts/'
+
+      - uses: andelf/nightly-release@main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: nightly
+          name: 'Development Release'
+          body: |
+            Development release for commit ${{ github.sha }}. 
+          files: |
+            ./artifacts/build-output/*.geode
